[project]
name = "fluxrun"
version = "v2.0.2"
description = "Python wrapper for EddyPro flux calculations"
authors = [
    {name = "Lukas Hörtnagl",email = "holukas@ethz.ch"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
